[gd_scene load_steps=7 format=3 uid="uid://mm8sgtv5rkbu"]

[ext_resource type="Script" path="res://Scripts/Traps/Trap_class.gd" id="1_eqvsi"]
[ext_resource type="Script" path="res://Scripts/Traps/Trap_controller.gd" id="2_4nxxa"]
[ext_resource type="Texture2D" uid="uid://d0jtbmhyhhljc" path="res://Assets/Sprites/brackeys_platformer_assets/brackeys_platformer_assets/sprites/world_tileset.png" id="2_ars7j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8kk2"]
size = Vector2(28.5, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kxo5"]
atlas = ExtResource("2_ars7j")
region = Rect2(112, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3rkc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kxo5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Trap" type="Node2D" groups=["Trap"]]
script = ExtResource("1_eqvsi")

[node name="Area_trap" type="Area2D" parent="."]
collision_mask = 5
script = ExtResource("2_4nxxa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_trap"]
shape = SubResource("RectangleShape2D_s8kk2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.8125, 1.73865)
sprite_frames = SubResource("SpriteFrames_y3rkc")

[connection signal="trap_destroyed" from="." to="." method="_on_trap_destroyed"]
[connection signal="body_entered" from="Area_trap" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area_trap" to="Area_trap" method="_on_body_entered"]
[connection signal="body_exited" from="Area_trap" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="Area_trap" to="Area_trap" method="_on_body_exited"]
[connection signal="mouse_entered" from="Area_trap" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area_trap" to="." method="_on_area_2d_mouse_exited"]
